[gd_scene load_steps=3 format=3 uid="uid://bfpuy0l00qc7x"]

[ext_resource type="Theme" uid="uid://bk5ddumg2jusp" path="res://assets/style/text.tres" id="1_4npkp"]
[ext_resource type="Script" uid="uid://rle6jhowtsw8" path="res://scripts/prefabs/settings.gd" id="1_lqm0t"]

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqm0t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -54.0
offset_right = 80.5
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="Music" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4npkp")
text = "Music"

[node name="SFX" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4npkp")
text = "SFX"

[node name="FlickeringDisable" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4npkp")
text = "Disable Flickering"

[node name="KeybindGrowLasso" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4npkp")
text = "Lasso Grow on shift or right click"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4npkp")
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="VBoxContainer/Music" to="." method="hover_sound"]
[connection signal="mouse_entered" from="VBoxContainer/SFX" to="." method="hover_sound"]
[connection signal="mouse_entered" from="VBoxContainer/FlickeringDisable" to="." method="hover_sound"]
[connection signal="mouse_entered" from="VBoxContainer/KeybindGrowLasso" to="." method="hover_sound"]
[connection signal="mouse_entered" from="VBoxContainer/Back" to="." method="hover_sound"]
